.archive/clusters/homelab-1/.network-policies/allow-egress-to-kubedns/destination/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-kubedns
spec:
  podSelector:
    matchLabels:
      k8s-app: kube-dns
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              networking/allow-egress-to-kubedns: "true"
      ports:
        - protocol: UDP
          port: 53
